Update function Build Version 2.1

--- a/Views/Shared/_TeacherLayout.cshtml
+++ b/Views/Shared/_TeacherLayout.cshtml
@@ -1,6 +1,6 @@
 ﻿@using QuanLyCongTacTroGiangKhoaCNTT.Models;
 <!doctype html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
@@ -412,7 +412,7 @@
                                 <label class="form-label" for="infonganh">
                                     Ngành
                                 </label>
-                                <select class="form-select" id="infonganh">
+                                <select disabled class="form-select" id="infonganh">
                                     @if (tk.ID_Nganh == null)
                                     {
                                         <option selected value="">---- Chọn ngành ----</option>
