--- a/Views/Users/_Index.cshtml
+++ b/Views/Users/_Index.cshtml
@@ -30,7 +30,7 @@
 }
 
 <div class="row" id="pageload">
-    <div class="col-xl-6 col-lg-6 col-md-6 col-12">
+    <div class="col-xl-3 col-lg-3 col-md-3 col-12">
         <div class="card mb-4">
             <!-- Card body -->
             <div class="card-body d-flex flex-column gap-2">
@@ -48,7 +48,7 @@
             </div>
         </div>
     </div>
-    <div class="col-xl-6 col-lg-6 col-md-6 col-12">
+    <div class="col-xl-3 col-lg-3 col-md-3 col-12">
         <div class="card mb-4">
             <!-- Card body -->
             <div class="card-body d-flex flex-column gap-2">
@@ -66,7 +66,7 @@
             </div>
         </div>
     </div>
-    <div class="col-xl-4 col-lg-4 col-md-4 col-12">
+    <div class="col-xl-3 col-lg-3 col-md-3 col-12">
         <div class="card mb-4">
             <!-- Card body -->
             <div class="card-body d-flex flex-column gap-2">
@@ -84,14 +84,14 @@
             </div>
         </div>
     </div>
-    <div class="col-xl-4 col-lg-4 col-md-4 col-12">
+    <div class="col-xl-3 col-lg-3 col-md-3 col-12">
         <div class="card mb-4">
             <!-- Card body -->
             <div class="card-body d-flex flex-column gap-2">
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="lh-1 d-flex flex-column gap-1">
-                        <h2 class="h1 fw-bold mb-0">@(lstUser.Where(w => w.AspNetUsers.AspNetRoles.First().ID.Equals("3")).Count())</h2>
-                        <span>Quản trị viên</span>
+                        <h2 class="h1 fw-bold mb-0">@(lstUser.Where(w => w.AspNetUsers.AspNetRoles.First().ID.Equals("3") || w.AspNetUsers.AspNetRoles.First().ID.Equals("5")).Count())</h2>
+                        <span>@(lstUser.Where(w => w.AspNetUsers.AspNetRoles.First().ID.Equals("5")).Count()) PĐT - @(lstUser.Where(w => w.AspNetUsers.AspNetRoles.First().ID.Equals("3")).Count()) BCN</span>
                     </div>
                     <div>
                         <span class="bg-light-info icon-shape icon-xl rounded-3 text-dark-info">
@@ -102,24 +102,7 @@
             </div>
         </div>
     </div>
-    <div class="col-xl-4 col-lg-4 col-md-4 col-12">
-        <div class="card mb-4">
-            <!-- Card body -->
-            <div class="card-body d-flex flex-column gap-2">
-                <div class="d-flex justify-content-between align-items-center">
-                    <div class="lh-1 d-flex flex-column gap-1">
-                        <h2 class="h1 fw-bold mb-0">@(lstUser.Where(w => w.AspNetUsers.AspNetRoles.First().ID.Equals("5")).Count())</h2>
-                        <span>Phòng đào tạo</span>
-                    </div>
-                    <div>
-                        <span class="bg-light-danger icon-shape icon-xl rounded-3 text-dark-danger">
-                            <i style="font-size: 24px" class="bi bi-person-rolodex"></i>
-                        </span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    
     <div class="col-xl-12 col-lg-12 col-md-12 col-12">
         <!-- Card -->
         <div class="card">
@@ -127,9 +110,9 @@
             <div class="card-header border-bottom-0 pb-0">
                 <div class="row">
                     <div class="mb-3 col-md-4 col-12">
-                        <label class="form-label" for="filterchucdanh">Lọc Vai trò</label>
+                        <label class="form-label" for="filterchucdanh">Vai trò</label>
                         <select id="filterchucdanh" class="form-select" data-width="100%">
-                            <option value="0">Chọn Vai trò để lọc</option>
+                            <option value="0">Chọn tất cả</option>
                             @foreach (var item in lstRole)
                             {
                                 <option value="@item.ID">@item.Name</option>
@@ -138,6 +121,7 @@
                     </div>
                 </div>
             </div>
+            <hr />
             <div id="filterParentLoad">
                 <div class="card-body">
                     <!-- table  -->
@@ -186,8 +170,8 @@
                                                 </a>
 
                                                 @*<a style="font-size: 20px" role="button" id="openXoa-@item.ID" fullname="@item.Ma - @item.HoTen" name="@item.ID" class="text-danger">
-                                                    <span data-bs-toggle="tooltip" data-bs-html="true" title="Xóa bỏ"><i class="bi bi-trash"></i></span>
-                                                </a>*@
+                                                        <span data-bs-toggle="tooltip" data-bs-html="true" title="Xóa bỏ"><i class="bi bi-trash"></i></span>
+                                                    </a>*@
                                             }
                                         </td>
                                     </tr>
