--- a/Views/_ViewStart.cshtml
+++ b/Views/_ViewStart.cshtml
@@ -14,25 +14,35 @@
             Session["user-role-name"] = users.AspNetUsers.AspNetRoles.First().Name;
             Session["user-role-id"] = roleId;
 
-            if (roleId == 1)
+            if (users.ID_Nganh == null)
             {
-                Session["layout"] = "~/Views/Shared/_StudentLayout.cshtml";
-            }
-            else if (roleId == 2)
-            {
-                Session["layout"] = "~/Views/Shared/_TeacherLayout.cshtml";
-            }
-            else if (roleId == 3 || roleId == 5)
-            {
-                Session["layout"] = "~/Views/Shared/_DepartmentLayout.cshtml";
-            }
-            else if (roleId == 4)
-            {
-                Session["layout"] = "~/Views/Shared/_TALayout.cshtml";
+                Session["user-update-info"] = false;
+                Session["layout"] = "~/Views/Shared/_Layout.cshtml";
             }
             else
             {
-                Session["layout"] = "~/Views/Shared/_Layout.cshtml";
+                Session["user-update-info"] = true;
+
+                if (roleId == 1)
+                {
+                    Session["layout"] = "~/Views/Shared/_StudentLayout.cshtml";
+                }
+                else if (roleId == 2)
+                {
+                    Session["layout"] = "~/Views/Shared/_TeacherLayout.cshtml";
+                }
+                else if (roleId == 3 || roleId == 5)
+                {
+                    Session["layout"] = "~/Views/Shared/_DepartmentLayout.cshtml";
+                }
+                else if (roleId == 4)
+                {
+                    Session["layout"] = "~/Views/Shared/_TALayout.cshtml";
+                }
+                else
+                {
+                    Session["layout"] = "~/Views/Shared/_Layout.cshtml";
+                }
             }
         }
     }
