--- a/Views/ClassSection/QuanLyLopHoc.cshtml
+++ b/Views/ClassSection/QuanLyLopHoc.cshtml
@@ -7,7 +7,7 @@
 
     var taikhoan = Session["TaiKhoan"] as TaiKhoan;
     var ma = string.IsNullOrEmpty(taikhoan.Ma) ? "" : taikhoan.Ma.ToLower();
-    string userTennganh = taikhoan.Nganh == null ? "công nghệ thông tin" : taikhoan.Nganh.TenNganh;
+    string userTennganh = taikhoan.Nganh == null ? "công nghệ thông tin" : taikhoan.Nganh.TenNganh.ToLower();
     var userKhoa = models.Khoa.FirstOrDefault(f => f.Nganh.Where(w => w.TenNganh.Equals(userTennganh)).Count() > 0);
 
     var lstNganh = userKhoa.Nganh.OrderByDescending(o => o.ID).ToList();
