--- a/Views/ClassSection/_TaskListOnlyView.cshtml
+++ b/Views/ClassSection/_TaskListOnlyView.cshtml
@@ -47,4 +47,5 @@
 </div>
 <script>
     $('body').find('[id="btnviewtasklistmodalSubmit"]').prop('hidden', true);
+    $('body').find('[id="formCamKet"]').prop('hidden', true);
 </script>
