--- a/Views/ClassSection/_TaskListViewEdit.cshtml
+++ b/Views/ClassSection/_TaskListViewEdit.cshtml
@@ -71,4 +71,5 @@
 <script>
     $('body').find('.flatpickr').flatpickr({ locale: 'vn' });
     $('body').find('[id="btnviewtasklistmodalSubmit"]').prop('hidden', false);
+    $('body').find('[id="formCamKet"]').prop('hidden', false);
 </script>
