--- a/Views/TeachingAssistant/Registered.cshtml
+++ b/Views/TeachingAssistant/Registered.cshtml
@@ -4,7 +4,7 @@
     var taikhoan = Session["TaiKhoan"] as TaiKhoan;
     int roleId = Int32.Parse(Session["user-role-id"].ToString());
 
-    string userTennganh = taikhoan.Nganh == null ? "công nghệ thông tin" : taikhoan.Nganh.TenNganh.ToLower();
+    string userTennganh = taikhoan.Nganh == null ? "công nghệ thông tin" : taikhoan.Nganh.TenNganh.ToLower().ToLower();
     var userKhoa = models.Khoa.FirstOrDefault(f => f.Nganh.Where(w => w.TenNganh.Equals(userTennganh)).Count() > 0);
     var userNganh = userKhoa.Nganh.OrderByDescending(o => o.ID).ToList();
 
