--- a/Views/TermAndMajor/_EditSemester.cshtml
+++ b/Views/TermAndMajor/_EditSemester.cshtml
@@ -14,9 +14,9 @@
         <div class="col-md-6 col-12">
             <div class="mb-3">
                 <label class="form-label" for="editnambatdau">
-                    Năm bắt đầu <span class="text-danger">*</span>
+                    Năm bắt đầu
                 </label>
-                <select class="form-select" id="editnambatdau">
+                <select disabled class="form-select" id="editnambatdau">
                     @for (int i = DateTime.Now.Year - 10; i < DateTime.Now.Year + 10; i++)
                     {
                         if (i == Model.NamBatDau)
@@ -35,9 +35,9 @@
         <div class="col-md-6 col-12">
             <div class="mb-3">
                 <label class="form-label" for="editnamketthuc">
-                    Năm kết thúc <span class="text-danger">*</span>
+                    Năm kết thúc
                 </label>
-                <select class="form-select" id="editnamketthuc">
+                <select disabled class="form-select" id="editnamketthuc">
                     <option selected value="@(Model.NamBatDau + 1)">@(Model.NamBatDau + 1)</option>
                 </select>
                 <span class="text-danger" id="valid-editnamketthuc"></span>
@@ -49,7 +49,7 @@
                 <label class="form-label" for="editngaybatdau">
                     Ngày bắt đầu <span class="text-danger">*</span>
                 </label>
-                <input value="@Model.NgayBatDau.ToString("yyyy-MM-dd")" id="editngaybatdau" type="text" class="form-control flatpickr" placeholder="Chọn ngày bắt đầu">
+                <input data-default="@Model.NgayBatDau.ToString("yyyy-MM-dd")" value="@Model.NgayBatDau.ToString("yyyy-MM-dd")" id="editngaybatdau" type="text" class="form-control flatpickr" placeholder="Chọn ngày bắt đầu">
                 <span class="text-danger" id="valid-editngaybatdau"></span>
             </div>
         </div>
