--- a/Views/TimeTable/Import.cshtml
+++ b/Views/TimeTable/Import.cshtml
@@ -3,7 +3,7 @@
     CongTacTroGiangKhoaCNTTEntities models = new CongTacTroGiangKhoaCNTTEntities();
     var taikhoan = Session["TaiKhoan"] as TaiKhoan;
 
-    string userTennganh = taikhoan.Nganh == null ? "công nghệ thông tin" : taikhoan.Nganh.TenNganh.ToLower();
+    string userTennganh = taikhoan.Nganh == null ? "công nghệ thông tin" : taikhoan.Nganh.TenNganh.ToLower().ToLower();
     var userKhoa = models.Khoa.FirstOrDefault(f => f.Nganh.Where(w => w.TenNganh.Equals(userTennganh)).Count() > 0);
     var userNganh = userKhoa.Nganh.OrderByDescending(o => o.ID).ToList();
 
