--- a/Views/Shared/_DepartmentLayout.cshtml
+++ b/Views/Shared/_DepartmentLayout.cshtml
@@ -213,21 +213,21 @@
                                 <ul class="nav flex-column">
                                     <li class="nav-item ">
                                         <a id="child-studentaffairs-studentaffairssemesterandmajor-hocky" class="child-nav-link nav-link "
-                                           href="@Url.Action("semester", "TermAndMajor")">
+                                           href="@Url.Action("semester", "Term")">
                                             Học kỳ
                                         </a>
                                     </li>
                                     <!-- Nav item -->
                                     <li class="nav-item ">
                                         <a id="child-studentaffairs-studentaffairssemesterandmajor-nganh" class="child-nav-link nav-link "
-                                           href="@Url.Action("major", "TermAndMajor")">
+                                           href="@Url.Action("major", "Majors")">
                                             Ngành
                                         </a>
                                     </li>
                                     <!-- Nav item -->
                                     <li class="nav-item ">
                                         <a id="child-studentaffairs-studentaffairssemesterandmajor-khoa" class="child-nav-link nav-link "
-                                           href="@Url.Action("faculty", "TermAndMajor")">
+                                           href="@Url.Action("faculty", "Facultys")">
                                             Khoa
                                         </a>
                                     </li>
